syntax = "proto3";
package authiny;
option go_package = "./;authiny_grpc";

// Service for handling of authorization and authentication
service Authiny {
  // Do the Login
  rpc Login (LoginRequest) returns (LoginResponse) {}

  rpc CreateApplication (CreateApplicationRequest) returns (CreateApplicationResponse) {}
}

message Empty{}

message LoginRequest {
  string user = 1;
  string password = 2;
}

message CreateApplicationRequest {
  string application_name = 1;
}

message LoginResponse {
  string token = 1;
}

message CreateApplicationResponse {
  string application_id = 1;
}
